# SecureMCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: portunusmcp.mdc  securmcp.mdc
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_audit_log_and_policy_versions.py  0002_tool_baselines.py  0003_signing_and_verifier_checkpoint.py  0004_approvals.py  0005_approvals_server_id.py  0006_tool_baselines_suspicious.py
docs/adr/: ADR-001-fastapi.md  ADR-002-postgres-vs-dynamodb.md  ADR-003-redis.md  ADR-004-no-opa-for-v1.md  ADR-005-no-kubernetes-for-v1.md  ADR-006-why-not-alternatives.md  README.md
monitoring/: prometheus.yml
policies/: example-policy.yaml
sample_target/: overscoped_server.py  rogue_server.py
scripts/: audit_verifier_daemon.py  generate_api_key.py  generate_signing_key.py  reset_dev_state.py  run_demo.py  seed_policies.py  verify_audit_chain.py
services/: __init__.py
services/audit_verifier/: __init__.py  daemon.py
services/gateway/: __init__.py  abac.py  approvals.py  audit_log.py  audit_verifier.py  auth.py  config.py  db.py  decision.py  decision_explainer.py  drift_detector.py  jsonrpc_interceptor.py  logging_config.py  main.py  metrics.py  param_validator.py  policy_engine.py  policy_simulator.py  policy_versions.py  replay_guard.py  risk_engine.py  schema_cache.py  schema_pruner.py  session_manager.py  signing.py  step_up.py  (+1 more)
(+57 files in other folders)
